--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npm-run-all build:sass --parallel watch:*",
         "watch:sass": "sass --watch src/site/styles:dist/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
-        "build:eleventy": "cross-env ELEVENTY_ENV=prod eleventy",
+        "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
         "build:sass": "sass src/site/styles:dist/styles",
         "build": "npm-run-all build:*"
     },
@@ -31,6 +31,7 @@
         "markdown-it": "^12.3.2",
         "markdown-it-footnote": "^3.0.3",
         "markdown-it-mathjax3": "^4.3.1",
+        "markdown-it-plantuml": "^1.4.1",
         "markdown-it-task-checkbox": "^1.0.6"
     }
 }
