--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 THEME=https://raw.githubusercontent.com/kognise/obsidian-atom/master/obsidian.css
 BASE_THEME=dark
+SITE_NAME_HEADER=Digital Garden
+dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=false
