--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/kognise/obsidian-atom/master/obsidian.css
 BASE_THEME=dark
-SITE_NAME_HEADER=🌱 meleu
+SITE_NAME_HEADER=meleu.dev
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
