--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 THEME=https://raw.githubusercontent.com/kognise/obsidian-atom/master/obsidian.css
 BASE_THEME=dark
 SITE_NAME_HEADER=meleu.dev
+SITE_BASE_URL=https://meleu.netlify.app/
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
 dgEnableSearch=true
+dgShowToc=false
